tests/ui/impl-trait/precise-capturing/bad-lifetimes.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/bad-lifetimes.rs:1:39
   |
LL | fn no_elided_lt() -> impl Sized + use<'_> {}
   |                                       ^^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`, or if you will only have owned values
   |
LL - fn no_elided_lt() -> impl Sized + use<'_> {}
LL + fn no_elided_lt() -> impl Sized + use<'static> {}
   |

error[E0261]: use of undeclared lifetime name `'missing`
  --> $DIR/bad-lifetimes.rs:8:37
   |
LL | fn missing_lt() -> impl Sized + use<'missing> {}
   |              -                      ^^^^^^^^ undeclared lifetime
   |              |
   |              help: consider introducing lifetime `'missing` here: `<'missing>`

error: expected lifetime parameter in `use<...>` precise captures list, found `'_`
  --> $DIR/bad-lifetimes.rs:1:39
   |
LL | fn no_elided_lt() -> impl Sized + use<'_> {}
   |                                       ^^

error: expected lifetime parameter in `use<...>` precise captures list, found `'static`
  --> $DIR/bad-lifetimes.rs:5:36
   |
LL | fn static_lt() -> impl Sized + use<'static> {}
   |                                    ^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0106, E0261.
For more information about an error, try `rustc --explain E0106`.
